--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
-    "babel-preset-env": "^1.7.0"
+    "@babel/preset-env": "^7.4.5"
   }
 }
